--- a/myApp/www/templates/contact.html
+++ b/myApp/www/templates/contact.html
@@ -1,17 +1,18 @@
 <ion-view view-title="Contact">>
 
-  <ion-content><img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
-     <h4 class="pagetitles" >Contact informatie:</h4>
-    <div class="contact-container">
-    <hp>Sensatie Reizen – Voetbalsensatie<br>
-Telefoon: +316 53 69 51 83<br>
-Mail: info@sensatiereizen.nl<br>
-<br>
-KvK nr. Breda: 56149719<br>
-IBAN: NL35 RABO 0171 9173 75<br>
-BTW NL: 851993059B01</p></div>
+    <ion-content><img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
+        <h4 class="pagetitles">Contact informatie:</h4>
+        <div class="contact-container">
+            <hp>Sensatie Reizen – Voetbalsensatie
+                <br> Telefoon: +316 53 69 51 83
+                <br> Mail: info@sensatiereizen.nl
+                <br>
+                <br> KvK nr. Breda: 56149719
+                <br> IBAN: NL35 RABO 0171 9173 75
+                <br> BTW NL: 851993059B01</p>
+        </div>
 
-  	<img class="contactimg" ng-src="img/mapss.png" alt="">
+        <img class="contactimg" ng-src="img/mapss.png" alt="">
 
-  </ion-content>
+    </ion-content>
 </ion-view>
