--- a/myApp/www/templates/dutchoptions.html
+++ b/myApp/www/templates/dutchoptions.html
@@ -1,35 +1,24 @@
 <ion-view view-title="Opties">
-  <ion-content>
-    <div class="list">
-<div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
-<a class="item item-icon-left" href="#/app/dutch">
-       <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
+    <ion-content>
+        <div class="list">
+            <div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
+            <a class="item item-icon-left" href="#/app/dutch">
+                <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i> Ranglijst
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamtimeddutch">
+                <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i> Competitie Programma
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamfinisheddutch">
+                <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i> Gespeelde Wedstrijden
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teaminplaydutch">
+                <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i> Live Score
+            </a>
 
-   Ranglijst
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teamtimeddutch">
-    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
+            <a class="item item-icon-left item-icon-left" href="#/app/teaminfodutch">
+                <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i> Marktwaarde clubs
+            </a>
 
-Competitie Programma
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teamfinisheddutch">
-    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
-
-Gespeelde Wedstrijden
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminplaydutch">
-    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
-
-Live Score
-  </a>
-
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminfodutch">
-    <i class="icon"><img class="icon-competition" ng-src="img/eredivisie.png"></i>
-
-Marktwaarde clubs
-  </a>
-
-
-</div>
-  </ion-content>
+        </div>
+    </ion-content>
 </ion-view>
