--- a/myApp/www/templates/franceoptions.html
+++ b/myApp/www/templates/franceoptions.html
@@ -1,35 +1,23 @@
 <ion-view view-title="Opties">
-  <ion-content>
-    <div class="list">
-<div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
-<a class="item item-icon-left" href="#/app/france">
-       <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
+    <ion-content>
+        <div class="list">
+            <div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
+            <a class="item item-icon-left" href="#/app/france">
+                <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i> Ranglijst
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamtimedfrance">
+                <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i> Competitie Programma
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedfrance">
+                <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i> Gespeelde Wedstrijden
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teaminplayfrance">
+                <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i> Live Score
+            </a>
 
-   Ranglijst
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teamtimedfrance">
-    <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
-
-Competitie Programma
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedfrance">
-    <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
-
-Gespeelde Wedstrijden
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminplayfrance">
-    <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
-
-Live Score
-  </a>
-
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminfofrance">
-    <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i>
-
-Marktwaarde clubs
-  </a>
-
-
-</div>
-  </ion-content>
+            <a class="item item-icon-left item-icon-left" href="#/app/teaminfofrance">
+                <i class="icon"><img class="icon-competition" ng-src="img/lique1.png"></i> Marktwaarde clubs
+            </a>
+        </div>
+    </ion-content>
 </ion-view>
