--- a/myApp/www/templates/germanyoptions.html
+++ b/myApp/www/templates/germanyoptions.html
@@ -1,34 +1,24 @@
 <ion-view view-title="Opties">
-  <ion-content>
-    <div class="list">
-<div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
-<a class="item item-icon-left" href="#/app/germany">
-       <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
+    <ion-content>
+        <div class="list">
+            <div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
+            <a class="item item-icon-left" href="#/app/germany">
+                <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i> Ranglijst
+            </a>
 
-   Ranglijst
-  </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamtimedgermany">
+                <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i> Competitie Programma
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedgermany">
+                <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i> Gespeelde Wedstrijden
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teaminplaygermany">
+                <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i> Live Score
+            </a>
 
-  <a class="item item-icon-left item-icon-left" href="#/app/teamtimedgermany">
-    <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
-
-Competitie Programma
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedgermany">
-    <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
-
-Gespeelde Wedstrijden
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminplaygermany">
-    <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
-
-Live Score
-  </a>
-
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminfogermany">
-    <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i>
-
-Marktwaarde clubs
-  </a>
-</div>
-  </ion-content>
+            <a class="item item-icon-left item-icon-left" href="#/app/teaminfogermany">
+                <i class="icon"><img class="icon-competition" ng-src="img/bundesliga.png"></i> Marktwaarde clubs
+            </a>
+        </div>
+    </ion-content>
 </ion-view>
