--- a/myApp/www/templates/portugaloptions.html
+++ b/myApp/www/templates/portugaloptions.html
@@ -1,35 +1,22 @@
 <ion-view view-title="Opties">
-  <ion-content>
-    <div class="list">
-<div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
-<a class="item item-icon-left" href="#/app/portugal">
-       <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i>
-
-   Ranglijst
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teamtimedportugal">
-    <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i>
-
-Competitie Programma
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedportugal">
-    <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i>
-
-Gespeelde Wedstrijden
-  </a>
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminplayportugal">
-    <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i>
-
-Live Score
-  </a>
-
-  <a class="item item-icon-left item-icon-left" href="#/app/teaminfoportugal">
-    <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i>
-
-Marktwaarde clubs
-  </a>
-
-
-</div>
-  </ion-content>
+    <ion-content>
+        <div class="list">
+            <div ng-show='loader'><img ng-src="img/loading.gif" class="loader"></div>
+            <a class="item item-icon-left" href="#/app/portugal">
+                <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i> Ranglijst
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamtimedportugal">
+                <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i> Competitie Programma
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedportugal">
+                <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i> Gespeelde Wedstrijden
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teaminplayportugal">
+                <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i> Live Score
+            </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teaminfoportugal">
+                <i class="icon"><img class="icon-competition" ng-src="img/ligaportugal.png"></i> Marktwaarde clubs
+            </a>
+        </div>
+    </ion-content>
 </ion-view>
