--- a/myApp/www/templates/signup.html
+++ b/myApp/www/templates/signup.html
@@ -1,19 +1,19 @@
 <ion-view view-title="Registreren" hide-back-button="false">
-  	<ion-content>
-  	<img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
-  	<h4 class="pagetitles" >Maak hier gratis uw account aan</h4>
-	    <div class="containerpages">
-	   
-	   <label class="item item-input">
-        <input type="email" ng-model="newUser.email" maxlength="35" placeholder="Email:">
-      </label>
-	
-	  <label class="item item-input">
-        <input type="password" ng-model="newUser.password" minlength="5" maxlength="30" placeholder="Wachtwoord:">
-        
-      </label>
-	  <button ng-click="signup()" class="button button-block button-positive">
-Aanmelden</button>
-	  </div>
-	</ion>
-</ion>
+    <ion-content>
+        <img class="sensatielogopaginas" src="img/sensatielogoo.jpg" alt="">
+        <h4 class="pagetitles">Maak hier gratis uw account aan</h4>
+        <div class="containerpages">
+
+            <label class="item item-input">
+                <input type="email" ng-model="newUser.email" maxlength="35" placeholder="Email:">
+            </label>
+
+            <label class="item item-input">
+                <input type="password" ng-model="newUser.password" minlength="5" maxlength="30" placeholder="Wachtwoord:">
+
+            </label>
+            <button ng-click="signup()" class="button button-block button-positive">
+                Aanmelden</button>
+        </div>
+    </ion-content>
+</ion-view>
