--- a/myApp/www/templates/leaguetables_ek.html
+++ b/myApp/www/templates/leaguetables_ek.html
@@ -1,173 +1,176 @@
 <ion-view>
-      <ion-nav-title>
-		  <p class="league-title">{{league}}</p>
+    <ion-nav-title>
+        <p class="league-title">{{league}}</p>
     </ion-nav-title>
-  <ion-content>
-    <ion-list class="ranglijst" >
-        <table>
-          <tr>
-             <td class="leegveld" >  <h3 class="titlepoule">Poule A</h3></td>
-             <td class="ekvak">P</td>
-             <td class="ekvak">G</td>
-             <td class="ekvak">W</td>
+    <ion-content>
+        <ion-list class="ranglijst">
+            <table>
+                <tr>
+                    <td class="leegveld">
+                        <h3 class="titlepoule">Poule A</h3></td>
+                    <td class="ekvak">P</td>
+                    <td class="ekvak">G</td>
+                    <td class="ekvak">W</td>
 
-          </tr>
-         </table>
+                </tr>
+            </table>
 
-      <ion-item class="itemsbuiten"  ng-repeat="t in teams.standings.A">
-   <div style="overflow-x:auto;">
+            <ion-item class="itemsbuiten" ng-repeat="t in teams.standings.A">
+                <div style="overflow-x:auto;">
 
-  <table>
-    <tr>
+                    <table>
+                        <tr>
 
-      <td id="grotevanvakjes" class="grotevanvakjes">{{t.rank}}</td>
-      <td class="clubnamen" > <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
-      <td class="grotevanvakjes">{{t.points}}</td>
-      <td class="grotevanvakjes" >{{t.goals}}</td>
-      <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
+                            <td id="grotevanvakjes" class="grotevanvakjes">{{t.rank}}</td>
+                            <td class="clubnamen"> <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
+                            <td class="grotevanvakjes">{{t.points}}</td>
+                            <td class="grotevanvakjes">{{t.goals}}</td>
+                            <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
 
-    </tr>
-  </table>
-</div>
-   </ion-item>
- <br>
-	   <table>
-          <tr>
-             <td class="leegveld" >  <h3 class="titlepoule">Poule B</h3></td>
-             <td class="ekvak">P</td>
-             <td class="ekvak">G</td>
-             <td class="ekvak">W</td>
+                        </tr>
+                    </table>
+                </div>
+            </ion-item>
+            <br>
+            <table>
+                <tr>
+                    <td class="leegveld">
+                        <h3 class="titlepoule">Poule B</h3></td>
+                    <td class="ekvak">P</td>
+                    <td class="ekvak">G</td>
+                    <td class="ekvak">W</td>
 
-          </tr>
-         </table>
+                </tr>
+            </table>
 
+            <ion-item class="itemsbuiten" ng-repeat="t in teams.standings.B">
+                <div style="overflow-x:auto;">
+                    <table>
+                        <tr>
 
-   <ion-item class="itemsbuiten"  ng-repeat="t in teams.standings.B">
-      <div style="overflow-x:auto;">
-         <table>
-             <tr>
+                            <td id="grotevanvakjes" class="grotevanvakjes">{{t.rank}}</td>
+                            <td id="grotevanvakjes" class="clubnamen"> <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
+                            <td id="grotevanvakjes" class="grotevanvakjes">{{t.points}}</td>
+                            <td id="grotevanvakjes" class="grotevanvakjes">{{t.goals}}</td>
+                            <td id="grotevanvakjes" class="grotevanvakjes">{{t.goalsAgainst}}</td>
 
-               <td id="grotevanvakjes" class="grotevanvakjes">{{t.rank}}</td>
-               <td id="grotevanvakjes" class="clubnamen" > <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
-               <td id="grotevanvakjes" class="grotevanvakjes">{{t.points}}</td>
-               <td id="grotevanvakjes" class="grotevanvakjes" >{{t.goals}}</td>
-               <td id="grotevanvakjes" class="grotevanvakjes">{{t.goalsAgainst}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </ion-item>
+            <br>
+            <table>
+                <tr>
+                    <td class="leegveld">
+                        <h3 class="titlepoule">Poule C</h3></td>
+                    <td class="ekvak">P</td>
+                    <td class="ekvak">G</td>
+                    <td class="ekvak">W</td>
 
-             </tr>
-        </table>
-      </div>
-  </ion-item>
-<br>
-   <table>
-          <tr>
-             <td class="leegveld" >  <h3 class="titlepoule">Poule C</h3></td>
-             <td class="ekvak">P</td>
-             <td class="ekvak">G</td>
-             <td class="ekvak">W</td>
+                </tr>
+            </table>
 
-          </tr>
-         </table>
+            <ion-item class="itemsbuiten" ng-repeat="t in teams.standings.C">
+                <div style="overflow-x:auto;">
+                    <table>
+                        <tr>
 
+                            <td class="grotevanvakjes">{{t.rank}}</td>
+                            <td class="clubnamen"> <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
+                            <td class="grotevanvakjes">{{t.points}}</td>
+                            <td class="grotevanvakjes">{{t.goals}}</td>
+                            <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
 
-  <ion-item class="itemsbuiten"  ng-repeat="t in teams.standings.C">
-     <div style="overflow-x:auto;">
-        <table>
-            <tr>
+                        </tr>
+                    </table>
+                </div>
+            </ion-item>
+            <br>
+            <table>
+                <tr>
+                    <td class="leegveld">
+                        <h3 class="titlepoule">Poule D</h3></td>
+                    <td class="ekvak">P</td>
+                    <td class="ekvak">G</td>
+                    <td class="ekvak">W</td>
 
-              <td class="grotevanvakjes">{{t.rank}}</td>
-              <td class="clubnamen" > <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
-              <td class="grotevanvakjes">{{t.points}}</td>
-              <td class="grotevanvakjes" >{{t.goals}}</td>
-              <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
+                </tr>
+            </table>
 
-            </tr>
-       </table>
-     </div>
- </ion-item>
-<br>
-   <table>
-          <tr>
-             <td class="leegveld" >  <h3 class="titlepoule">Poule D</h3></td>
-             <td class="ekvak">P</td>
-             <td class="ekvak">G</td>
-             <td class="ekvak">W</td>
+            <ion-item class="itemsbuiten" ng-repeat="t in teams.standings.D">
+                <div style="overflow-x:auto;">
+                    <table>
+                        <tr>
 
-          </tr>
-         </table>
+                            <td class="grotevanvakjes">{{t.rank}}</td>
+                            <td class="clubnamen"> <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
+                            <td class="grotevanvakjes">{{t.points}}</td>
+                            <td class="grotevanvakjes">{{t.goals}}</td>
+                            <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
 
-  <ion-item class="itemsbuiten"  ng-repeat="t in teams.standings.D">
-     <div style="overflow-x:auto;">
-        <table>
-            <tr>
+                        </tr>
+                    </table>
+                </div>
+            </ion-item>
+            <br>
+            <table>
+                <tr>
+                    <td class="leegveld">
+                        <h3 class="titlepoule">Poule E</h3></td>
+                    <td class="ekvak">P</td>
+                    <td class="ekvak">G</td>
+                    <td class="ekvak">W</td>
 
-              <td class="grotevanvakjes">{{t.rank}}</td>
-              <td class="clubnamen" > <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
-              <td class="grotevanvakjes">{{t.points}}</td>
-              <td class="grotevanvakjes" >{{t.goals}}</td>
-              <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
+                </tr>
+            </table>
 
-            </tr>
-       </table>
-     </div>
- </ion-item>
-<br>
-   <table>
-          <tr>
-             <td class="leegveld" >  <h3 class="titlepoule">Poule E</h3></td>
-             <td class="ekvak">P</td>
-             <td class="ekvak">G</td>
-             <td class="ekvak">W</td>
+            <ion-item class="itemsbuiten" ng-repeat="t in teams.standings.E">
+                <div style="overflow-x:auto;">
+                    <table>
+                        <tr>
 
-          </tr>
-         </table>
+                            <td class="grotevanvakjes">{{t.rank}}</td>
+                            <td class="clubnamen"> <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
+                            <td class="grotevanvakjes">{{t.points}}</td>
+                            <td class="grotevanvakjes">{{t.goals}}</td>
+                            <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
 
-  <ion-item class="itemsbuiten"  ng-repeat="t in teams.standings.E">
-     <div style="overflow-x:auto;">
-        <table>
-            <tr>
+                        </tr>
+                    </table>
+                </div>
+            </ion-item>
+            <br>
+            <table>
+                <tr>
+                    <td class="leegveld">
+                        <h3 class="titlepoule">Poule F</h3></td>
+                    <td class="ekvak">P</td>
+                    <td class="ekvak">G</td>
+                    <td class="ekvak">W</td>
 
-              <td class="grotevanvakjes">{{t.rank}}</td>
-              <td class="clubnamen" > <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
-              <td class="grotevanvakjes">{{t.points}}</td>
-              <td class="grotevanvakjes" >{{t.goals}}</td>
-              <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
+                </tr>
+            </table>
 
-            </tr>
-       </table>
-     </div>
- </ion-item>
-<br>
-   <table>
-          <tr>
-             <td class="leegveld" >  <h3 class="titlepoule">Poule F</h3></td>
-             <td class="ekvak">P</td>
-             <td class="ekvak">G</td>
-             <td class="ekvak">W</td>
+            <ion-item class="itemsbuiten" ng-repeat="t in teams.standings.F">
+                <div style="overflow-x:auto;">
+                    <table>
+                        <tr>
 
-          </tr>
-         </table>
+                            <td class="grotevanvakjes">{{t.rank}}</td>
+                            <td class="clubnamen"> <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
+                            <td class="grotevanvakjes">{{t.points}}</td>
+                            <td class="grotevanvakjes">{{t.goals}}</td>
+                            <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
 
-  <ion-item class="itemsbuiten"  ng-repeat="t in teams.standings.F">
-     <div style="overflow-x:auto;">
-        <table>
-            <tr>
+                        </tr>
+                    </table>
+                </div>
+            </ion-item>
+            <br>
 
-              <td class="grotevanvakjes">{{t.rank}}</td>
-              <td class="clubnamen" > <img class="logoclub" ng-src="{{t.crestURI}}"> {{t.team}}</td>
-              <td class="grotevanvakjes">{{t.points}}</td>
-              <td class="grotevanvakjes" >{{t.goals}}</td>
-              <td class="grotevanvakjes">{{t.goalsAgainst}}</td>
-
-            </tr>
-       </table>
-     </div>
- </ion-item>
-<br>
-
-
-   </ion-list>
-   <p class="aantal">P = Aantal behaalde punten</p>
-   <p class="aantal">G = Aantal goals gemaakt</p>
-   <p class="aantal">W = Aantal tegen doelpunten</p>
-  </ion-content>
+        </ion-list>
+        <p class="aantal">P = Aantal behaalde punten</p>
+        <p class="aantal">G = Aantal goals gemaakt</p>
+        <p class="aantal">W = Aantal tegen doelpunten</p>
+    </ion-content>
 </ion-view>
