--- a/myApp/www/templates/competitieinlog.html
+++ b/myApp/www/templates/competitieinlog.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Competities">
-    <ion-content ng-controller="VoorkeurCrtl">
+    <ion-content ng-controller="PreferenceCrtl">
         <div class="list">
 
             <a ng-show="authdata.competities.premiereleague" class="item item-icon-left" href="#/app/englandoptions">
