--- a/myApp/www/templates/euoptions.html
+++ b/myApp/www/templates/euoptions.html
@@ -8,6 +8,9 @@
             <a class="item item-icon-left item-icon-left" href="#/app/teamtimedeu">
                 <i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i> Competitie Programma
             </a>
+            <a class="item item-icon-left item-icon-left" href="#/app/teamfinishedeu">
+                <i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i> Gespeelde Wedstrijden
+            </a>
             <a class="item item-icon-left item-icon-left" href="#/app/teaminplayeu">
                 <i class="icon"><img class="icon-competition" ng-src="img/EU2016.png"></i> Live Score
             </a>
